# palera1n

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
include/: xxd-embedded.h
patches/: 0001-Allow-empty-x509-cert-issuer.patch
patches/libimobiledevice/: 0001-include-windows-header.patch
resources/: DFUHelperDeviceInfo.json  Info.plist  app.rc  palera1n.icns
src/: Makefile  event.cpp  event.hpp  exec_checkra1n.c  main.cpp  sequence.cpp  sequence.hpp  state.hpp  usb.xml
src/helper/: Makefile  chkstk.S  helper.c  hook_arm64.c  hook_x86_64.c  phookra1n.h
src/m8/: checkm8.c  checkm8.h  dfu.c  dfu.h  payload.c  payload.h  run.cpp  run.hpp  usb-libusb.c  usb-libusb.h
src/tools/: Makefile  counterfeit_elf.h  patcher.c  payloads
src/ui/: app.cpp
src/utils/: constants.h  log.h
src/wx/: AppFrame.cpp  AppFrame.hpp  DevicePanel.hpp  DfuPanel.cpp  DfuPanel.hpp  ExploitPanel.cpp  ExploitPanel.hpp  MainPanel.cpp  MainPanel.hpp  RecoveryPanel.cpp  RecoveryPanel.hpp  SettingsPanel.cpp  SettingsPanel.hpp
